@@ -1,5 +1,6 @@
 7 November 2008: Wouter
 	- fix bug 217: fixed, setreuid and setregid do not work on MacOSX10.4.
+	- detect nonblocking problems in network stack in configure script.
 
 6 November 2008: Wouter
 	- dname_priv must decompress the name before comparison.
